syntax = "proto3";
package zkp_auth;

message RegisterRequest {
    string user = 1;
    uint32 y1 = 2;
    uint32 y2 = 3;
}

message RegisterResponse {}

message AuthenticationChallengeRequest {
    string user = 1;
    uint32 r1 = 2;
    uint32 r2 = 3;
}

message AuthenticationChallengeResponse {
    string auth_id = 1;
    uint32 c = 2;
}

message AutheticationAnswerRequest {
    string auth_id = 1;
    uint32 s = 2;
}

message AutheticationAnswerResponse {
    string session_id = 1;
}

service Auth {
    rpc Register(RegisterRequest) returns (RegisterResponse) {}
    rpc CreateAuthenticationChallenge(AuthenticationChallengeRequest) returns (AuthenticationChallengeResponse) {}
    rpc VerifyAuthentication(AutheticationAnswerRequest) returns (AutheticationAnswerResponse) {}
}